# braccio_description

./: CMakeLists.txt  LICENSE  README.md  package.xml
meshes/: base.stl  elbow.stl  gripper_base.stl  gripper_fix.stl  gripper_left.stl  gripper_movable.stl  gripper_right.stl  shoulder.stl  wrist_pitch.stl  wrist_roll.stl
res/: braccio.blend
urdf/: braccio.urdf
